// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Telemetry submitMetric function Succeeds with a validly formatted metric 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "fields": Array [
          Object {
            "name": "hello",
            "type": "string",
            "value": "world",
          },
        ],
        "name": "test metric",
        "tags": Object {
          "you know": "me",
        },
        "timestamp": 2020-12-31T00:00:00.000Z,
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Telemetry submitMetric function submits with default date if unspecified 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "fields": Array [
          Object {
            "name": "hello",
            "type": "string",
            "value": "world",
          },
        ],
        "name": "test metric",
        "tags": Object {
          "you know": "me",
        },
        "timestamp": 1999-12-31T00:00:00.000Z,
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Telemetry submitMetric function submits with no tags if unspecified 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "fields": Array [
          Object {
            "name": "hello",
            "type": "string",
            "value": "world",
          },
        ],
        "name": "test metric",
        "tags": Object {},
        "timestamp": 2020-12-31T00:00:00.000Z,
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;
